# FoxRecon

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_v2_features.py
docker/: init.sql
docs/: 01-getting-started.md  02-architecture.md  03-scanners.md  index.md
internal/: __init__.py  config.py
internal/api/: app.py
internal/api/routes/: auth.py  dashboard.py  findings.py  intelligence.py  reports.py  scans.py  schedules.py  targets.py  websocket.py
internal/api/schemas/: __init__.py
internal/auth/: __init__.py  jwt.py
internal/database/: base.py
internal/database/models/: __init__.py  reporting.py  scans.py  targets.py  users.py  v2_features.py
internal/findings/: __init__.py  normalizer.py
internal/integrations/: api_discovery.py  cloud_exposure.py  dns_intelligence.py  js_analysis.py
internal/parsers/: __init__.py
internal/queue/: __init__.py
internal/recon/: __init__.py  engine.py
internal/reporting/: __init__.py  generator.py
internal/scanners/: __init__.py  base.py  ffuf.py  gowitness.py  httpx.py  naabu.py  nuclei.py  subfinder.py
internal/utils/: __init__.py  logging.py  security.py  subprocess.py
internal/websocket/: __init__.py  manager.py
internal/workers/: __init__.py  celery_app.py  scheduler.py  tasks.py
scripts/: db.py
tests/: __init__.py  conftest.py
tests/integration/: test_api.py
tests/unit/: test_config.py  test_scanners.py  test_security.py  test_subprocess.py  test_v2_intelligence.py  test_v2_scanners.py
